--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ dependencies {
 
 	// Mods
 	modImplementation "net.fabricmc.fabric-api:fabric-api:$fabric_api"
-	modImplementation "com.terraformersmc:modmenu:$modmenu"
+	//modImplementation "com.terraformersmc:modmenu:$modmenu"
 	modCompileOnly "maven.modrinth:iris:$iris"
 }
 
