--- a/gradle.properties
+++ b/gradle.properties
@@ -4,9 +4,9 @@ org.gradle.parallel = true
 
 # Fabric Properties (https://fabricmc.net/develop/)
 java_version = 17
-minecraft_version = 1.19.2
-loader_version = 0.14.9
-mappings = 16
+minecraft_version = 22w43a
+loader_version = 0.14.10
+mappings = 4
 
 # Mod Properties
 mod_version = 0.1.0-rc.10
@@ -16,6 +16,6 @@ archives_base_name = figura
 # Dependencies
 luaj = 3.0.4
 websocket = 1.5.2
-fabric_api = 0.60.0+1.19.2
+fabric_api = 0.65.1+1.19.3
 modmenu = 4.0.6
-iris = 1.19.x-v1.2.6
+iris = 1.19.x-v1.4.0
